# serializer version: 1
# name: test_read_multiple_migration_files
  dict({
    'update': list([
      dict({
        'source': dict({
          'categories': list([
            'Emissions to air',
            'low. pop.',
          ]),
          'name': 'Cesium-134',
          'unit': 'kBq',
        }),
        'target': dict({
          'categories': list([
            'Emissions to air',
            'low. pop., long-term',
          ]),
        }),
      }),
      dict({
        'source': dict({
          'name': 'Zinc, Zn 0.63%, Au 9.7E-4%, Ag 9.7E-4%, Cu 0.38%, Pb 0.014%, in ore',
        }),
        'target': dict({
          'name': 'Zinc, Zn 0.63%, in mixed ore',
        }),
      }),
      dict({
        'source': dict({
          '@id': '4f777e05-70f9-4a18-a406-d8232325073f',
        }),
        'target': dict({
          '@id': 'b6b4201e-0561-5992-912f-e729fbf04e41',
        }),
      }),
      dict({
        'source': dict({
          'categories': list([
            'Air',
            'high. pop.',
          ]),
          'name': '1,4-Butanediol',
        }),
        'target': dict({
          'categories': list([
            'Air',
            '(unspecified)',
          ]),
        }),
      }),
      dict({
        'conversion_factor': 1.2142857142857142,
        'source': dict({
          'name': 'Ammonia, as N',
        }),
        'target': dict({
          'name': 'Ammonia',
        }),
      }),
    ]),
  })
# ---
# name: test_read_single_migration_file
  dict({
    'update': list([
      dict({
        'source': dict({
          'categories': list([
            'Emissions to air',
            'low. pop.',
          ]),
          'name': 'Cesium-134',
          'unit': 'kBq',
        }),
        'target': dict({
          'categories': list([
            'Emissions to air',
            'low. pop., long-term',
          ]),
        }),
      }),
      dict({
        'source': dict({
          'name': 'Zinc, Zn 0.63%, Au 9.7E-4%, Ag 9.7E-4%, Cu 0.38%, Pb 0.014%, in ore',
        }),
        'target': dict({
          'name': 'Zinc, Zn 0.63%, in mixed ore',
        }),
      }),
      dict({
        'source': dict({
          '@id': '4f777e05-70f9-4a18-a406-d8232325073f',
        }),
        'target': dict({
          '@id': 'b6b4201e-0561-5992-912f-e729fbf04e41',
        }),
      }),
    ]),
  })
# ---
